[package]
name = "server-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio"] }
serde = { version = "1.0", features = ["derive"] }
base64 = "0.21"
uuid = { version = "1.11.0", features = ["v4"] }
lazy_static = "1.5.0"
regex = "1.11.0"
reqwest = "0.12.8"
